Have TypeSpec use Spotless as well